sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:4: error: not found: value gap
    if (gap>1) {
        ^AlgCombSort:5: error: not found: value gap
      gap=gap/1.3
      ^AlgCombSort:8: error: not found: value i
    i=0
    ^AlgCombSort:9: error: not found: value i
    while (i+gap<getValueCount()) {
           ^AlgCombSort:9: error: not found: value gap
    while (i+gap<getValueCount()) {
             ^AlgCombSort:10: error: not found: value i
      if (!isSmaller(i,i+1)) {
                     ^AlgCombSort:10: error: not found: value i
      if (!isSmaller(i,i+1)) {
                       ^AlgCombSort:11: error: not found: value i
        swap(i+1,i)
             ^AlgCombSort:11: error: not found: value i
        swap(i+1,i)
                 ^AlgCombSort:12: error: not found: value i
        i+=1
        ^AlgCombSort:16: error: not found: value gap
  } while ((gap>1)||(i>0))
            ^AlgCombSort:16: error: not found: value i
  } while ((gap>1)||(i>0))
                     ^