sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  do {
    if (gap>1) {
      gap=gap/1.3
      
    }
    i=0
    while (i+gap<getValueCount()) {
      if (!isSmaller(i,i+1)) {
        swap(i+1,i)
        i+=1
      }
      
    }
  } while ((gap>1)||(i>0))
  
}